--- a/Pandas/Kaggle/3-summary functions and maps.ipynb
+++ b/Pandas/Kaggle/3-summary functions and maps.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T10:07:50.117944Z",
-     "start_time": "2024-12-22T10:07:49.209487Z"
+     "end_time": "2024-12-24T07:22:45.042105Z",
+     "start_time": "2024-12-24T07:22:42.708839Z"
     }
    },
    "cell_type": "code",
@@ -273,18 +273,18 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:15.728774Z",
-     "start_time": "2024-12-22T09:45:15.715711Z"
+     "end_time": "2024-12-24T07:22:45.076026Z",
+     "start_time": "2024-12-24T07:22:45.057733Z"
     }
    },
    "cell_type": "code",
@@ -684,8 +684,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:15.762335Z",
-     "start_time": "2024-12-22T09:45:15.753317Z"
+     "end_time": "2024-12-24T07:22:45.117204Z",
+     "start_time": "2024-12-24T07:22:45.104451Z"
     }
    },
    "cell_type": "code",
@@ -827,8 +827,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:15.972168Z",
-     "start_time": "2024-12-22T09:45:15.960336Z"
+     "end_time": "2024-12-24T07:22:45.233599Z",
+     "start_time": "2024-12-24T07:22:45.218092Z"
     }
    },
    "cell_type": "code",
@@ -1050,8 +1050,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:16.265569Z",
-     "start_time": "2024-12-22T09:45:16.254935Z"
+     "end_time": "2024-12-24T07:22:45.457682Z",
+     "start_time": "2024-12-24T07:22:45.447770Z"
     }
    },
    "cell_type": "code",
@@ -1451,8 +1451,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:16.570684Z",
-     "start_time": "2024-12-22T09:45:16.557937Z"
+     "end_time": "2024-12-24T07:22:45.646740Z",
+     "start_time": "2024-12-24T07:22:45.635151Z"
     }
    },
    "cell_type": "code",
@@ -1479,8 +1479,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:16.840662Z",
-     "start_time": "2024-12-22T09:45:16.835415Z"
+     "end_time": "2024-12-24T07:22:46.100242Z",
+     "start_time": "2024-12-24T07:22:46.092131Z"
     }
    },
    "cell_type": "code",
@@ -1507,8 +1507,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:17.026178Z",
-     "start_time": "2024-12-22T09:45:17.021406Z"
+     "end_time": "2024-12-24T07:22:46.394263Z",
+     "start_time": "2024-12-24T07:22:46.377794Z"
     }
    },
    "cell_type": "code",
@@ -1531,8 +1531,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:17.260627Z",
-     "start_time": "2024-12-22T09:45:17.252153Z"
+     "end_time": "2024-12-24T07:22:46.729874Z",
+     "start_time": "2024-12-24T07:22:46.721012Z"
     }
    },
    "cell_type": "code",
@@ -1556,8 +1556,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:17.522270Z",
-     "start_time": "2024-12-22T09:45:17.516342Z"
+     "end_time": "2024-12-24T07:22:46.802767Z",
+     "start_time": "2024-12-24T07:22:46.797075Z"
     }
    },
    "cell_type": "code",
@@ -1600,8 +1600,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:17.621684Z",
-     "start_time": "2024-12-22T09:45:17.615278Z"
+     "end_time": "2024-12-24T07:22:46.905305Z",
+     "start_time": "2024-12-24T07:22:46.896841Z"
     }
    },
    "cell_type": "code",
@@ -1639,8 +1639,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:18.059765Z",
-     "start_time": "2024-12-22T09:45:17.911028Z"
+     "end_time": "2024-12-24T07:22:47.128655Z",
+     "start_time": "2024-12-24T07:22:47.000079Z"
     }
    },
    "cell_type": "code",
@@ -1920,8 +1920,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:18.159405Z",
-     "start_time": "2024-12-22T09:45:18.153702Z"
+     "end_time": "2024-12-24T07:22:47.303524Z",
+     "start_time": "2024-12-24T07:22:47.297241Z"
     }
    },
    "cell_type": "code",
@@ -1960,8 +1960,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:18.293500Z",
-     "start_time": "2024-12-22T09:45:18.285456Z"
+     "end_time": "2024-12-24T07:22:47.414894Z",
+     "start_time": "2024-12-24T07:22:47.397597Z"
     }
    },
    "cell_type": "code",
@@ -2002,8 +2002,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:18.553922Z",
-     "start_time": "2024-12-22T09:45:18.540219Z"
+     "end_time": "2024-12-24T07:22:47.627792Z",
+     "start_time": "2024-12-24T07:22:47.618361Z"
     }
    },
    "cell_type": "code",
@@ -2237,8 +2237,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:18.864Z",
-     "start_time": "2024-12-22T09:45:18.853570Z"
+     "end_time": "2024-12-24T07:22:47.753525Z",
+     "start_time": "2024-12-24T07:22:47.744142Z"
     }
    },
    "cell_type": "code",
@@ -2475,8 +2475,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:19.085338Z",
-     "start_time": "2024-12-22T09:45:19.075634Z"
+     "end_time": "2024-12-24T07:22:47.974198Z",
+     "start_time": "2024-12-24T07:22:47.963140Z"
     }
    },
    "cell_type": "code",
@@ -2734,8 +2734,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:19.215014Z",
-     "start_time": "2024-12-22T09:45:19.203111Z"
+     "end_time": "2024-12-24T07:22:48.301521Z",
+     "start_time": "2024-12-24T07:22:48.283392Z"
     }
    },
    "cell_type": "code",
@@ -3014,8 +3014,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:19.406422Z",
-     "start_time": "2024-12-22T09:45:19.395681Z"
+     "end_time": "2024-12-24T07:22:48.500430Z",
+     "start_time": "2024-12-24T07:22:48.485718Z"
     }
    },
    "cell_type": "code",
@@ -3341,8 +3341,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:19.627595Z",
-     "start_time": "2024-12-22T09:45:19.617197Z"
+     "end_time": "2024-12-24T07:22:48.660122Z",
+     "start_time": "2024-12-24T07:22:48.642675Z"
     }
    },
    "cell_type": "code",
@@ -3661,8 +3661,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:19.817941Z",
-     "start_time": "2024-12-22T09:45:19.813183Z"
+     "end_time": "2024-12-24T07:22:49.035385Z",
+     "start_time": "2024-12-24T07:22:49.028942Z"
     }
    },
    "cell_type": "code",
@@ -3685,8 +3685,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:20.265530Z",
-     "start_time": "2024-12-22T09:45:20.257475Z"
+     "end_time": "2024-12-24T07:22:49.164211Z",
+     "start_time": "2024-12-24T07:22:49.153770Z"
     }
    },
    "cell_type": "code",
@@ -3711,8 +3711,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T10:07:59.051885Z",
-     "start_time": "2024-12-22T10:07:58.266308Z"
+     "end_time": "2024-12-24T07:22:50.182263Z",
+     "start_time": "2024-12-24T07:22:49.337895Z"
     }
    },
    "cell_type": "code",
@@ -4022,12 +4022,12 @@
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -4038,8 +4038,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:21.407282Z",
-     "start_time": "2024-12-22T09:45:21.395645Z"
+     "end_time": "2024-12-24T07:22:50.275939Z",
+     "start_time": "2024-12-24T07:22:50.253035Z"
     }
    },
    "cell_type": "code",
@@ -4068,8 +4068,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:21.519716Z",
-     "start_time": "2024-12-22T09:45:21.509985Z"
+     "end_time": "2024-12-24T07:22:50.460373Z",
+     "start_time": "2024-12-24T07:22:50.448551Z"
     }
    },
    "cell_type": "code",
@@ -4098,6 +4098,30 @@
    "execution_count": 26
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-24T07:22:50.657624Z",
+     "start_time": "2024-12-24T07:22:50.648622Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "len(reviews['country'].unique())",
+   "id": "3392f3670c6af6e4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 27
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "3. how often does each country appear in dataset? create a series review_per_country mapping countries to the count of that country",
@@ -4106,8 +4130,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:47:08.894551Z",
-     "start_time": "2024-12-22T09:47:08.883087Z"
+     "end_time": "2024-12-24T07:22:50.878200Z",
+     "start_time": "2024-12-24T07:22:50.865106Z"
     }
    },
    "cell_type": "code",
@@ -4135,12 +4159,12 @@
        "Name: count, Length: 43, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 45
+   "execution_count": 28
   },
   {
    "metadata": {},
@@ -4151,13 +4175,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:21.839282Z",
-     "start_time": "2024-12-22T09:45:21.829461Z"
+     "end_time": "2024-12-24T07:25:51.718242Z",
+     "start_time": "2024-12-24T07:25:51.699104Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "centered_price = reviews['price'] - reviews['price'].shift(1).mean()\n",
+    "centered_price = reviews['price'] - reviews['price'].mean()\n",
     "centered_price"
    ],
    "id": "66db7960282995eb",
@@ -4166,25 +4190,25 @@
      "data": {
       "text/plain": [
        "0               NaN\n",
-       "1        -20.363508\n",
-       "2        -21.363508\n",
-       "3        -22.363508\n",
-       "4         29.636492\n",
+       "1        -20.363389\n",
+       "2        -21.363389\n",
+       "3        -22.363389\n",
+       "4         29.636611\n",
        "            ...    \n",
-       "129966    -7.363508\n",
-       "129967    39.636492\n",
-       "129968    -5.363508\n",
-       "129969    -3.363508\n",
-       "129970   -14.363508\n",
+       "129966    -7.363389\n",
+       "129967    39.636611\n",
+       "129968    -5.363389\n",
+       "129969    -3.363389\n",
+       "129970   -14.363389\n",
        "Name: price, Length: 129971, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 28
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -4198,13 +4222,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:21.986113Z",
-     "start_time": "2024-12-22T09:45:21.977214Z"
+     "end_time": "2024-12-24T07:32:48.015305Z",
+     "start_time": "2024-12-24T07:32:48.001368Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "index_of_max = (reviews['points'].idxmax() / reviews['price']).idxmax()\n",
+    "index_of_max = (reviews['points'] / reviews['price']).idxmax()\n",
     "index_of_max\n",
     "bargain_wine = reviews.loc[index_of_max, 'title']\n",
     "bargain_wine"
@@ -4214,15 +4238,15 @@
     {
      "data": {
       "text/plain": [
-       "'Felix Solis 2013 Flirty Bird Syrah (Vino de la Tierra de Castilla)'"
+       "'Bandit NV Merlot (California)'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -4237,8 +4261,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:46:41.860847Z",
-     "start_time": "2024-12-22T09:46:41.696456Z"
+     "end_time": "2024-12-24T07:22:51.681760Z",
+     "start_time": "2024-12-24T07:22:51.444691Z"
     }
    },
    "cell_type": "code",
@@ -4260,12 +4284,12 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 41
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -4281,8 +4305,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T10:10:30.605472Z",
-     "start_time": "2024-12-22T10:10:29.684294Z"
+     "end_time": "2024-12-24T07:22:52.465308Z",
+     "start_time": "2024-12-24T07:22:51.756010Z"
     }
    },
    "cell_type": "code",
@@ -4322,18 +4346,18 @@
        "Name: Stars, Length: 129971, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:22.427219Z",
-     "start_time": "2024-12-22T09:45:22.425253Z"
+     "end_time": "2024-12-24T07:22:52.510941Z",
+     "start_time": "2024-12-24T07:22:52.508337Z"
     }
    },
    "cell_type": "code",
